fix: [CVS-9062]: Pagination items getting misaligned on big paginatio… (#7252)
* fix: [CVS-9062]: Pagination items getting misaligned on big pagination for Metrics and Logs and Loading text overlaps on the graphic

* fix: [CVS-9062]: snapshot

* fix: [CVS-9062]: fix loading

* fix: [CVS-9062]: fix test

* fix: [CVS-9062]: code review changes

* fix: [CVS-9062]: rebase

--- a/src/modules/85-cv/pages/monitored-service/components/ServiceHealth/components/MetricsAndLogs/components/MetricsAnalysisContainer/MetricsAnalysisContainer.module.scss
+++ b/src/modules/85-cv/pages/monitored-service/components/ServiceHealth/components/MetricsAndLogs/components/MetricsAnalysisContainer/MetricsAnalysisContainer.module.scss
@@ -30,3 +30,6 @@
     padding-top: var(--spacing-medium) !important;
   }
 }
+.maxPaginationWidth {
+  width: max-content !important;
+}
